--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,28 +1,24 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
 
-{% load staticfiles %} <!-- New line -->
+{% block title_block %}
+    Homepage
+{% endblock %}
 
-<html>
-
-    <head>
-        <title>Rango</title>
-    </head>
-
-    <body>
-        <h1>Rango says...</h1>
+{% block body_block %}
+     <h1>Rango says...</h1>
         <div>
             hey there partner! <br />
             <strong>{{ boldmessage }}</strong><br />
         </div>
 
         <h2>Most Liked Categories</h2>
-
         <div>
         {% if categories %}
-            <ul>
+             <ul>
             {% for category in categories %}
             <li>
-                <a href="/rango/category/{{ category.slug }}/">{{ category.name }}</a>
+                <a href="{% url 'rango:show_category' category.slug %}">{{ category.name }}</a>
             </li>
             {% endfor %}
             </ul>
@@ -33,7 +29,7 @@
 
         <h2>Most Viewed Pages</h2>
 
-        <div>
+         <div>
             {% if pages %}
             <ul>
                 {% for page in pages %}
@@ -41,16 +37,11 @@
                 {% endfor %}
             </ul>
             {% else %}
-                <strong>There are no pages present.</strong>
+            <strong>There are no pages present.</strong>
             {% endif %}
         </div>
 
         <div>
-            <a href="/rango/about/">About</a><br />
-            <a href="/rango/add_category/">Add a New Category</a><br />
-            <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" /> <!-- New line -->
+            <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
         </div>
-
-    </body>
-
-</html>
+{% endblock %}
